--- a/CollectionViewExercise/Base.lproj/Main.storyboard
+++ b/CollectionViewExercise/Base.lproj/Main.storyboard
@@ -33,20 +33,27 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KhT-q6-8Ea">
-                                                    <rect key="frame" x="43" y="53.5" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kkk-K7-Hg4">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="7bh-M3-Wkq">
+                                                    <rect key="frame" x="45.5" y="45.5" width="37" height="37"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </activityIndicatorView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="KhT-q6-8Ea" firstAttribute="centerX" secondItem="c94-Sg-XGN" secondAttribute="centerX" id="63A-uY-AXJ"/>
-                                                <constraint firstItem="KhT-q6-8Ea" firstAttribute="centerY" secondItem="c94-Sg-XGN" secondAttribute="centerY" id="VbO-FU-Xv7"/>
+                                                <constraint firstItem="7bh-M3-Wkq" firstAttribute="centerX" secondItem="c94-Sg-XGN" secondAttribute="centerX" id="6mZ-TI-1TW"/>
+                                                <constraint firstItem="7bh-M3-Wkq" firstAttribute="centerY" secondItem="c94-Sg-XGN" secondAttribute="centerY" id="A62-bT-LMx"/>
+                                                <constraint firstAttribute="trailing" secondItem="Kkk-K7-Hg4" secondAttribute="trailing" id="HVz-mN-DSQ"/>
+                                                <constraint firstItem="Kkk-K7-Hg4" firstAttribute="leading" secondItem="c94-Sg-XGN" secondAttribute="leading" id="M3T-DH-i7I"/>
+                                                <constraint firstAttribute="bottom" secondItem="Kkk-K7-Hg4" secondAttribute="bottom" id="pmM-za-VuM"/>
+                                                <constraint firstItem="Kkk-K7-Hg4" firstAttribute="top" secondItem="c94-Sg-XGN" secondAttribute="top" id="v8s-Ma-Yii"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
-                                            <outlet property="emojiLabel" destination="KhT-q6-8Ea" id="oat-OO-3rG"/>
+                                            <outlet property="imageView" destination="Kkk-K7-Hg4" id="1MI-pW-7vn"/>
+                                            <outlet property="spinner" destination="7bh-M3-Wkq" id="47c-nf-pNe"/>
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="DropPlaceholderCell" id="gtE-x8-fRq">
@@ -56,7 +63,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="pS0-kF-usi">
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="pS0-kF-usi">
                                                     <rect key="frame" x="54" y="54" width="20" height="20"/>
                                                     <color key="color" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </activityIndicatorView>
@@ -70,7 +77,7 @@
                                 </cells>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ncv-rk-cyk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="8NU-PP-Isa"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ncv-rk-cyk" secondAttribute="trailing" id="PFO-LT-ket"/>
@@ -85,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
