--- a/CollectionViewExercise/Base.lproj/Main.storyboard
+++ b/CollectionViewExercise/Base.lproj/Main.storyboard
@@ -121,16 +121,29 @@
                                 <rect key="frame" x="169" y="387.66666666666669" width="37" height="37"/>
                                 <color key="color" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="690" translatesAutoresizingMaskIntoConstraints="NO" id="IJ8-fh-7pI">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="690" translatesAutoresizingMaskIntoConstraints="NO" id="IJ8-fh-7pI">
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5hJ-h6-gH5">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="690"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="bottom" secondItem="ViF-7t-huv" secondAttribute="bottom" id="7xp-mY-DLt"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="top" secondItem="JE8-BA-vSj" secondAttribute="top" id="Pgy-hY-UTi"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="leading" secondItem="JE8-BA-vSj" secondAttribute="leading" id="QVw-KL-obZ"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="centerX" secondItem="IJ8-fh-7pI" secondAttribute="centerX" id="bq8-rU-upt"/>
+                                    <constraint firstItem="JE8-BA-vSj" firstAttribute="trailing" secondItem="5hJ-h6-gH5" secondAttribute="trailing" constant="-375" id="cNn-9O-XqT"/>
+                                    <constraint firstItem="JE8-BA-vSj" firstAttribute="bottom" secondItem="5hJ-h6-gH5" secondAttribute="bottom" constant="-690" id="iz9-uu-CNn"/>
+                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="JE8-BA-vSj"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="ViF-7t-huv"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="top" secondItem="Pi3-j4-b7o" secondAttribute="top" id="4nm-6E-rNa"/>
                             <constraint firstItem="Pi3-j4-b7o" firstAttribute="bottom" secondItem="IJ8-fh-7pI" secondAttribute="bottom" id="AuU-l3-VpH"/>
+                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="width" secondItem="qJ7-M4-xff" secondAttribute="width" id="Bp0-18-dcA"/>
                             <constraint firstItem="IJ8-fh-7pI" firstAttribute="leading" secondItem="Pi3-j4-b7o" secondAttribute="leading" id="Lre-Xe-svg"/>
                             <constraint firstItem="reO-xT-7Pe" firstAttribute="centerY" secondItem="qJ7-M4-xff" secondAttribute="centerY" id="N3w-wf-Jjb"/>
                             <constraint firstItem="reO-xT-7Pe" firstAttribute="centerX" secondItem="qJ7-M4-xff" secondAttribute="centerX" id="lO0-mz-FgW"/>
@@ -141,6 +154,7 @@
                     <navigationItem key="navigationItem" id="zXu-vH-1dd"/>
                     <connections>
                         <outlet property="DetailScrollView" destination="IJ8-fh-7pI" id="oWA-bZ-AJ2"/>
+                        <outlet property="detailImageView" destination="5hJ-h6-gH5" id="sfb-tE-ZzY"/>
                         <outlet property="spinner" destination="reO-xT-7Pe" id="0fJ-aP-ET5"/>
                     </connections>
                 </viewController>
