--- a/CollectionViewExercise/Base.lproj/Main.storyboard
+++ b/CollectionViewExercise/Base.lproj/Main.storyboard
@@ -121,20 +121,18 @@
                                 <rect key="frame" x="169" y="387.66666666666669" width="37" height="37"/>
                                 <color key="color" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="690" translatesAutoresizingMaskIntoConstraints="NO" id="IJ8-fh-7pI">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="690" translatesAutoresizingMaskIntoConstraints="NO" id="IJ8-fh-7pI">
                                 <rect key="frame" x="0.0" y="88" width="375" height="690"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5hJ-h6-gH5">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5hJ-h6-gH5">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="690"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="bottom" secondItem="ViF-7t-huv" secondAttribute="bottom" id="7xp-mY-DLt"/>
-                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="top" secondItem="JE8-BA-vSj" secondAttribute="top" id="Pgy-hY-UTi"/>
-                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="leading" secondItem="JE8-BA-vSj" secondAttribute="leading" id="QVw-KL-obZ"/>
-                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="centerX" secondItem="IJ8-fh-7pI" secondAttribute="centerX" id="bq8-rU-upt"/>
-                                    <constraint firstItem="JE8-BA-vSj" firstAttribute="trailing" secondItem="5hJ-h6-gH5" secondAttribute="trailing" constant="-375" id="cNn-9O-XqT"/>
-                                    <constraint firstItem="JE8-BA-vSj" firstAttribute="bottom" secondItem="5hJ-h6-gH5" secondAttribute="bottom" constant="-690" id="iz9-uu-CNn"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="trailing" secondItem="IJ8-fh-7pI" secondAttribute="trailing" id="0pA-A7-cAn"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="leading" secondItem="IJ8-fh-7pI" secondAttribute="leading" id="2Mf-u2-mzV"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="bottom" secondItem="IJ8-fh-7pI" secondAttribute="bottom" id="Jvx-bK-yyr"/>
+                                    <constraint firstItem="5hJ-h6-gH5" firstAttribute="top" secondItem="IJ8-fh-7pI" secondAttribute="top" id="frR-d9-HCw"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="JE8-BA-vSj"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="ViF-7t-huv"/>
@@ -142,12 +140,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="Pi3-j4-b7o" firstAttribute="bottom" secondItem="IJ8-fh-7pI" secondAttribute="bottom" id="AuU-l3-VpH"/>
-                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="width" secondItem="qJ7-M4-xff" secondAttribute="width" id="Bp0-18-dcA"/>
-                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="leading" secondItem="Pi3-j4-b7o" secondAttribute="leading" id="Lre-Xe-svg"/>
+                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="top" secondItem="qJ7-M4-xff" secondAttribute="top" constant="88" id="Buf-4k-xCe"/>
                             <constraint firstItem="reO-xT-7Pe" firstAttribute="centerY" secondItem="qJ7-M4-xff" secondAttribute="centerY" id="N3w-wf-Jjb"/>
+                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="trailing" secondItem="qJ7-M4-xff" secondAttribute="trailing" id="Qk4-it-ODg"/>
+                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="leading" secondItem="qJ7-M4-xff" secondAttribute="leading" id="iHz-f2-gzv"/>
                             <constraint firstItem="reO-xT-7Pe" firstAttribute="centerX" secondItem="qJ7-M4-xff" secondAttribute="centerX" id="lO0-mz-FgW"/>
-                            <constraint firstItem="Pi3-j4-b7o" firstAttribute="trailing" secondItem="IJ8-fh-7pI" secondAttribute="trailing" id="wG9-vw-X5R"/>
+                            <constraint firstItem="IJ8-fh-7pI" firstAttribute="bottom" secondItem="qJ7-M4-xff" secondAttribute="bottom" constant="-34" id="sMd-P6-coo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Pi3-j4-b7o"/>
                     </view>
